# aoc-rust

./: Cargo.toml  Cargo.tree  README.md  init.sh  prepare.sh
2015/day_04/: Cargo.toml
2015/day_05/: Cargo.toml
2015/day_06/: Cargo.toml
src/: lib.rs  main.rs  template.rs
