workspace = { members = ["puzzle_2015_01"] }
[package]
name = "aoc-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-client = "0.2.0"
comfy-table = "7.1.1"
indicatif = "0.17.8"
rand = "0.8.5"
